force-app/main/default/objects/Freight_Rate__c/Freight_Rate__c.object-meta.xml
<CustomObject>
    <label>Backbone AMV/Freight Rate</label>
    <nameField>
        <displayFormat>BA-{0}</displayFormat>
        <label>Backbone Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Backbone AMV/Freight Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>