force-app/main/default/objects/Freight_Rate__c/fields/Alt_Type__c.field-meta.xml
<CustomField>
    <fullName>Alt_Type__c</fullName>
    <formula>TEXT(Source__r.Alt_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alt Type</label>
    <type>Text</type>
</CustomField>