force-app/main/default/objects/Freight_Rate__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipName>Freight_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>