force-app/main/default/objects/Freight_Rate__c/fields/Destination_Code__c.field-meta.xml
<CustomField>
    <fullName>Destination_Code__c</fullName>
    <formula>Destination__r.Plant_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Code</label>
    <type>Text</type>
</CustomField>