force-app/main/default/objects/Freight_Rate__c/fields/Freight_diff_EUR_mt__c.field-meta.xml
<CustomField>
    <fullName>Freight_diff_EUR_mt__c</fullName>
    <label>Freight diff [EUR/mt]</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>