force-app/main/default/objects/Freight_Rate__c/fields/Freight_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Freight_Percentage__c</fullName>
    <label>Freight Percentage(ICP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>