force-app/main/default/objects/Freight_Rate__c/fields/Freight_Quotation__c.field-meta.xml
<CustomField>
    <fullName>Freight_Quotation__c</fullName>
    <label>Freight Quotation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rv_Freight_quotation</valueSetName>
    </valueSet>
</CustomField>