force-app/main/default/objects/Freight_Rate__c/fields/Freight_rate_EUR_mt__c.field-meta.xml
<CustomField>
    <fullName>Freight_rate_EUR_mt__c</fullName>
    <formula>IF(ISPICKVAL( Freight_Cost__c ,&apos;Variable&apos;) ,Freight_Percentage__c *Marker__c + Freight_diff_EUR_mt__c,Freight_diff_EUR_mt__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Freight rate [EUR/mt]</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>