force-app/main/default/objects/Freight_Rate__c/fields/Marker__c.field-meta.xml
<CustomField>
    <fullName>Marker__c</fullName>
    <label>Marker Value(€/mt)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>