force-app/main/default/objects/Freight_Rate__c/fields/Mode_Of_Transport__c.field-meta.xml
<CustomField>
    <fullName>Mode_Of_Transport__c</fullName>
    <label>Mode of Transport(MOT)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rv_MOT</valueSetName>
    </valueSet>
</CustomField>