force-app/main/default/objects/Freight_Rate__c/fields/PlantGradeUnq__c.field-meta.xml
<CustomField>
    <fullName>PlantGradeUnq__c</fullName>
    <formula>Destination_Code__c+TEXT(Standard_Grade__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PlantGradeUnq</label>
    <type>Text</type>
</CustomField>