force-app/main/default/objects/Freight_Rate__c/fields/Quote_Region_Source__c.field-meta.xml
<CustomField>
    <fullName>Quote_Region_Source__c</fullName>
    <formula>TEXT(Source__r.Quote_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Region(Source)</label>
    <type>Text</type>
</CustomField>