force-app/main/default/objects/Freight_Rate__c/fields/Route_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Route_Utilization__c</fullName>
    <label>Route Utilization %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>