force-app/main/default/objects/Freight_Rate__c/fields/Rv_Required_for_Scenario_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Rv_Required_for_Scenario_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the backbone record is being used in steer logic.</description>
    <label>Required for Scenario Calculation?</label>
    <type>Checkbox</type>
</CustomField>