force-app/main/default/objects/Freight_Rate__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipName>Freight_Rates1</relationshipName>
    <type>Lookup</type>
</CustomField>