force-app/main/default/objects/Freight_Rate__c/fields/Standard_Grade__c.field-meta.xml
<CustomField>
    <fullName>Standard_Grade__c</fullName>
    <label>Product Sub Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rv_Standard_Grade</valueSetName>
    </valueSet>
</CustomField>