force-app/main/default/objects/Freight_Rate__c/fields/SubGrade_3P__c.field-meta.xml
<CustomField>
    <fullName>SubGrade_3P__c</fullName>
    <label>Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AGO B0</fullName>
            </value>
            <value>
                <fullName>AGO B0 CH</fullName>
            </value>
            <value>
                <fullName>AGO B7</fullName>
            </value>
            <value>
                <fullName>AGO VPD</fullName>
            </value>
            <value>
                <fullName>GTL B0</fullName>
            </value>
            <value>
                <fullName>GTL B7</fullName>
            </value>
            <value>
                <fullName>IGO 1000ppm</fullName>
            </value>
            <value>
                <fullName>IGO 10ppm</fullName>
            </value>
            <value>
                <fullName>IGO 50ppm</fullName>
            </value>
            <value>
                <fullName>ULG100 VP</fullName>
            </value>
            <value>
                <fullName>ULG95_BOB_E10</fullName>
            </value>
            <value>
                <fullName>ULG95_BOB_E5</fullName>
            </value>
            <value>
                <fullName>ULG95 E0</fullName>
            </value>
            <value>
                <fullName>ULG95 E10</fullName>
            </value>
            <value>
                <fullName>ULG95 E5</fullName>
            </value>
            <value>
                <fullName>ULG98</fullName>
            </value>
            <value>
                <fullName>ULG 98 E0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>