force-app/main/default/objects/Freight_Rate__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gunvor</fullName>
            </value>
            <value>
                <fullName>Shell</fullName>
            </value>
            <value>
                <fullName>Total</fullName>
            </value>
            <value>
                <fullName>BP</fullName>
            </value>
            <value>
                <fullName>Varo</fullName>
            </value>
            <value>
                <fullName>OMV</fullName>
            </value>
            <value>
                <fullName>ENI</fullName>
            </value>
            <value>
                <fullName>Q8</fullName>
            </value>
            <value>
                <fullName>HGM</fullName>
            </value>
            <value>
                <fullName>Klesch</fullName>
            </value>
            <value>
                <fullName>MOL</fullName>
            </value>
            <value>
                <fullName>STR</fullName>
            </value>
            <value>
                <fullName>DS</fullName>
            </value>
            <value>
                <fullName>Holborn</fullName>
            </value>
            <value>
                <fullName>ESSO</fullName>
            </value>
            <value>
                <fullName>Leitner</fullName>
            </value>
            <value>
                <fullName>Alcmene</fullName>
            </value>
            <value>
                <fullName>Rosneft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>