force-app/main/default/objects/Freight_Rate__c/fields/Supply_Type__c.field-meta.xml
<CustomField>
    <fullName>Supply_Type__c</fullName>
    <formula>Source__r.Supply_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supply Type</label>
    <type>Text</type>
</CustomField>