force-app/main/default/objects/Freight_Rate__c/fields/Valid_To_Fomula__c.field-meta.xml
<CustomField>
    <fullName>Valid_To_Fomula__c</fullName>
    <formula>CASE(WEEKDAY( Valid_To__c ),
2, Valid_To__c - 7, 
3, Valid_To__c - 7, 
4, Valid_To__c - 7,
5, Valid_To__c - 7,
6, Valid_To__c - 7,
7, Valid_To__c - 6,
1, Valid_To__c - 7,
null)</formula>
    <label>Valid To Fomula</label>
    <type>Date</type>
</CustomField>