force-app/main/default/objects/Freight_Rate__c/fields/Valid_To_Prior_to_3_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Valid_To_Prior_to_3_Weeks__c</fullName>
    <formula>Valid_To__c - 21</formula>
    <label>Valid To - Prior to 3 Weeks</label>
    <type>Date</type>
</CustomField>