force-app/main/default/objects/Freight_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Destination__c</columns>
    <columns>Mode_Of_Transport__c</columns>
    <columns>Freight_Cost__c</columns>
    <columns>Freight_Quotation__c</columns>
    <columns>Freight_Percentage__c</columns>
    <columns>Marker__c</columns>
    <columns>Freight_diff_EUR_mt__c</columns>
    <columns>Freight_rate_EUR_mt__c</columns>
    <columns>Valid_From__c</columns>
    <columns>Valid_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Mode_Of_Transport__c</field>
        <operation>equals</operation>
        <value>Barge</value>
    </filters>
    <label>Barge View</label>
</ListView>