force-app/main/default/objects/Freight_Rate__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Backbone_Route_Name__c</columns>
    <columns>Source__c</columns>
    <columns>Destination__c</columns>
    <columns>Freight_Quotation__c</columns>
    <columns>PlantGradeUnq__c</columns>
    <columns>Destination_Code__c</columns>
    <columns>SubGrade_3P__c</columns>
    <columns>Freight_rate_EUR_mt__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Valid_From__c</columns>
    <columns>Valid_To__c</columns>
    <columns>Route_Utilization__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>