force-app/main/default/objects/Freight_Rate__c/listViews/Backbone_AMV_View.listView-meta.xml
<ListView>
    <fullName>Backbone_AMV_View</fullName>
    <columns>NAME</columns>
    <columns>Standard_Grade__c</columns>
    <columns>SubGrade_3P__c</columns>
    <columns>Destination__c</columns>
    <columns>Supplier__c</columns>
    <columns>Route_Utilization__c</columns>
    <columns>Source__c</columns>
    <columns>Mode_Of_Transport__c</columns>
    <columns>Freight_rate_EUR_mt__c</columns>
    <columns>Valid_From__c</columns>
    <columns>Valid_To__c</columns>
    <columns>Rv_Required_for_Scenario_Calculation__c</columns>
    <columns>Freight_diff_EUR_mt__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Bio_Split__c</columns>
    <filterScope>Everything</filterScope>
    <label>Backbone AMV View</label>
</ListView>