force-app/main/default/objects/Freight_Rate__c/listViews/Platts_FOB_Barge_R_dam_Diesel_10ppm_hig.listView-meta.xml
<ListView>
    <fullName>Platts_FOB_Barge_R_dam_Diesel_10ppm_hig</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Platts FOB Barge R&apos;dam Diesel 10ppm (high)</value>
    </filters>
    <label>Platts FOB Barge R&apos;dam Diesel 10ppm (hig</label>
</ListView>