force-app/main/default/objects/Freight_Rate__c/listViews/Test_SOM.listView-meta.xml
<ListView>
    <fullName>Test_SOM</fullName>
    <columns>NAME</columns>
    <columns>Backbone_Route_Name__c</columns>
    <columns>Source__c</columns>
    <columns>Destination__c</columns>
    <columns>Freight_Quotation__c</columns>
    <columns>Alt_Type__c</columns>
    <columns>PlantGradeUnq__c</columns>
    <columns>SubGrade_3P__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Valid_To__c</columns>
    <columns>Valid_From__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>4/24/2023 12:00 AM</value>
    </filters>
    <label>Test SOM</label>
</ListView>